create api get list assignment mark
