# src/routes/swagger.json
@@ -827,6 +827,40 @@
 				]
 			}
 		},
+		"/assignments/mark-done/{classId}": {
+			"get": {
+				"operationId": "GetAssignmentMarkDone",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IAssignmentResponse"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Assignments"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "classId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/assignments/{assignmentId}": {
 			"put": {
 				"operationId": "UpdateAssignment",
